--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <!-- 請將{{YourName}}換成你的名字-->
-        <title>{{YourName}}</title>
+        <title>yuchengli</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -25,13 +25,12 @@
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
                             <!-- 請將{{YourName}}換成你的名字-->
-                            <a class="brand" href="#">{{YourName}}</a>
+                            <a class="brand" href="#">yuchengli</a>
                          </div>
                         <div class="collapse navbar-collapse pull-right">
                             <ul class="nav pull-left">
                                 <li class="active"><a href="#">首頁</a></li>
-                                <li><a href="{{GithubUrl}}">作品集</a></li>
-                            </ul>
+                                <li><a href="{{GitHubUrl}}">作品集</a></li>                            </ul>
                         </div>
                     </div>
                 </div>
